* libopts needs to be built after ElectricFence.
* [Bug 894] Initialize keysdir before calling crypto_setup().
* Calysto cleanup for ntpq.
* ntp-keygen -i takes an arg.
* Cleanup and fixes from Dave Mills.
* [Bug 887] Fix error in ntp_types.h (for sizeof int != 4).
* Bug 880 bug fixes for Windows build
* Improve Calysto support.
* The "revoke" parameter is a crypto command.
* The driftfile wander threshold is a real number.
* [Bug 850] Fix the wander threshold parameter on the driftfile command.
* ntp_io.c: Dead code cleanup - Coverity View 19.
* Leap file related cleanup from Dave Mills.
* ntp_peer.c: Set peer->srcadr before (not after) calling set_peerdstadr().
* Initialize offset in leap_file() - Coverity View 17.
* Use the correct stratum on KISS codes.
* Fuzz bits cleanup.
* Show more digits in some debug printf's.
* Use drift_file_sw internally to control writing the drift file.
* Implement the wander_threshold option for the driftfile config keyword.
* reformat ntp_control.c; do not use c++ // comments.
* [Bug 629] Undo bug #629 fixes as they cause more problems than were  being
  solved
* Changes from Dave Mills: in/out-bound data rates, leapsecond cleanup,
  driftfile write cleanup, packet buffer length checks, documentation updates.
* More assertion checks and malloc()->emalloc(), courtesy of Calysto.
* [Bug 864] Place ntpd service in maintenance mode if using SMF on Solaris
* [Bug 862] includefile nesting; preserve phonelist on reconfig.
* [Bug 604] ntpd regularly dies on linux/alpha.
* more leap second infrastructure fixes from Dave Mills.
* [Bug 858] recent leapfile changes broke non-OpenSSL builds.
* Use emalloc() instead of malloc() in refclock_datum.c (Calysto).
* Start using 'design by contract' assertions.
* [Bug 767] Fast sync to refclocks wanted.
* Allow null driftfile.
* Use YYERROR_VERBOSE for the new parser, and fix related BUILT_SOURCES.
* [Bug 629] changes to ensure broadcast works including on wildcard addresses