@@ -1,3 +1,4 @@
+* ntp-keygen cleanup from Dave Mills.
 * libopts needs to be built after ElectricFence.
 * [Bug 894] Initialize keysdir before calling crypto_setup().
 * Calysto cleanup for ntpq.
